--- a/assets/scss/global/_global_blockconstructor.scss
+++ b/assets/scss/global/_global_blockconstructor.scss
@@ -1,5 +1,5 @@
 
-// Block Element Modifier Constructor v0.0.3
+// Block Element Modifier Constructor v0.0.4
 
 $_blockNameList: ();
 $_blockName: "" !global;
@@ -85,7 +85,10 @@ $extendModePoints: () !global;
 		$_currentList: ();
 		$_currentList: append($_currentList, $_name);
 		$_currentList: append($_currentList, "element");
-		$_currentList: append($_currentList, #{&});
+
+		//$_currentList: append($_currentList, #{&});
+		$_currentList: append($_currentList, false);
+
 		$_constructorList: append($_constructorList, $_currentList) !global;
 
 		$selectorReturned: constructSelector();
@@ -105,6 +108,9 @@ $extendModePoints: () !global;
 }
 
 
+
+
+
 //elements get appended with "__" and the $name
 @mixin e($name, $prefix: "") {
 	$selector: "";
@@ -117,7 +123,10 @@ $extendModePoints: () !global;
 		$_currentList: ();
 		$_currentList: append($_currentList, $_name);
 		$_currentList: append($_currentList, "element");
-		$_currentList: append($_currentList, #{&});
+
+		//$_currentList: append($_currentList, #{&});
+		$_currentList: append($_currentList, "NOT SET");
+
 		$_currentList: append($_currentList, $prefix);
 		$_constructorList: append($_constructorList, $_currentList) !global;
 
@@ -177,7 +186,10 @@ $extendModePoints: () !global;
 		$_currentList: ();
 		$_currentList: append($_currentList, $_name);
 		$_currentList: append($_currentList, "modifier");
-		$_currentList: append($_currentList, #{&});
+
+		//$_currentList: append($_currentList, #{&});
+		$_currentList: append($_currentList, "NOT SET");
+
 		$_constructorList: append($_constructorList, $_currentList) !global;
 
 		$selectorReturned: constructSelector();
@@ -480,42 +492,45 @@ $extendModePoints: () !global;
 	$type: nth($_currentList, 2);
 	$parent: nth($_currentList, 3);
 
-	@for $i from 1 through length($extendModePoints) {
-		$extendModePoint: nth($extendModePoints,$i);
-		// block - elem/block, modifier, placeholderId
-		$pointBlock: nth($extendModePoint,1);
-		$pointElem: nth($extendModePoint,2);
-		$pointModifier: nth($extendModePoint,3);
-		$pointPlaceholder: nth($extendModePoint,4);
+	@if length($extendModePoints) > 0 {
+		@for $i from 1 through length($extendModePoints) {
 
-		@if $pointBlock == $_blockName {
-			@if str_length($pointElem) > 0 and str_length($pointModifier) > 0 {
-				//@debug "-----> 1";
-				$_elemComparator: "." + $_blockName + "__" + $pointElem;
-				@if $pointModifier == $name and $parent == $_elemComparator {
-					//@debug "-Succes <------------";
-					$_placeholderList: append($_placeholderList, $pointPlaceholder);
+			$extendModePoint: nth($extendModePoints,$i);
+			// block - elem/block, modifier, placeholderId
+			$pointBlock: nth($extendModePoint,1);
+			$pointElem: nth($extendModePoint,2);
+			$pointModifier: nth($extendModePoint,3);
+			$pointPlaceholder: nth($extendModePoint,4);
+
+			@if $pointBlock == $_blockName {
+				@if str_length($pointElem) > 0 and str_length($pointModifier) > 0 {
+					//@debug "-----> 1";
+					$_elemComparator: "." + $_blockName + "__" + $pointElem;
+					@if $pointModifier == $name and $parent == $_elemComparator {
+						//@debug "-Succes <------------";
+						$_placeholderList: append($_placeholderList, $pointPlaceholder);
+					}
 				}
-			}
-			@else if str_length($pointElem) > 0 {
-				//@debug "-----> 2";
-				@if $pointElem == $name {
-					//@debug "-Succes <------------";
-					$_placeholderList: append($_placeholderList, $pointPlaceholder);
+				@else if str_length($pointElem) > 0 {
+					//@debug "-----> 2";
+					@if $pointElem == $name {
+						//@debug "-Succes <------------";
+						$_placeholderList: append($_placeholderList, $pointPlaceholder);
+					}
 				}
-			}
-			@else if str_length($pointModifier) > 0 {
-				$_blockComparator: "." + $_blockName;
-				@if $pointModifier == $name and ($parent == false or $parent == $_blockComparator) {
-					//@debug "-----> 3";
-					//@debug "-Succes <------------";
-					$_placeholderList: append($_placeholderList, $pointPlaceholder);
+				@else if str_length($pointModifier) > 0 {
+					$_blockComparator: "." + $_blockName;
+					@if $pointModifier == $name and ($parent == false or $parent == $_blockComparator) {
+						//@debug "-----> 3";
+						//@debug "-Succes <------------";
+						$_placeholderList: append($_placeholderList, $pointPlaceholder);
+					}
 				}
-			}
-			@else {
-				$_blockComparator: "." + $name;
-				@if $parent == false or $parent == $_blockComparator {
-					$_placeholderList: append($_placeholderList, $pointPlaceholder);
+				@else {
+					$_blockComparator: "." + $name;
+					@if $parent == false or $parent == $_blockComparator {
+						$_placeholderList: append($_placeholderList, $pointPlaceholder);
+					}
 				}
 			}
 		}
