--- a/assets/views/master.jade
+++ b/assets/views/master.jade
@@ -39,9 +39,10 @@ html
 
 				//tr
 					td(bgcolor="#030303", width="100%")
-						table(width="640", align="center", cellspacing="0", cellpadding="0", border="0")
+						table(width="680", align="center", cellspacing="0", cellpadding="0", border="0")
 							tbody
 								tr
+									td(width="20", height="100%")
 									td(width="640")
 										table(width="640", align="center", cellspacing="0", cellpadding="0", border="0")
 											tbody
@@ -52,12 +53,14 @@ html
 														a(href="#", style="color:#919191; font-size: 9px; text-decoration: none; display: block;", mc:edit="editor_upperheader_text") Har du problemer med at se indholdet, KLIK HER
 												tr
 													td(height="3")
+									td(width="20", height="100%")
 				// header
 				tr
 					td(bgcolor="#252425", width="100%", style="background-image:url(img/graphic_header_bg.jpg); background-position: center top; background-size:100% 100%; background-color:#252425;")
-						table(width="640", align="center", cellspacing="0", cellpadding="0", border="0")
+						table(width="680", align="center", cellspacing="0", cellpadding="0", border="0")
 							tbody
 								tr
+									td(width="20", height="100%")
 									td(width="640")
 										table(width="640", align="center", cellspacing="0", cellpadding="0", border="0")
 											tbody
@@ -68,41 +71,46 @@ html
 													td(align="center", height="150", style="color:#fff;")
 														a(href="http://www.facebook.com/urtekram")
 															img(src="img/graphic_header_facebook.png", mc:edit="editor_header_facebook")
+									td(width="20", height="100%")
 				tr
 					td(width="100%", height="11", style="background-image:url(img/graphic_header_bg_transition.png); background-repeat:repeat-x; background-color: #C6AC89;")
 				// news
-				tr(mc:hideable)
+				tr
 					td(bgcolor="#c6ac89", width="100%")
-						table(width="640", align="center", cellspacing="0", cellpadding="0", border="0")
+						table(width="680", align="center", cellspacing="0", cellpadding="0", border="0")
 							tbody
 								tr
+									td(width="20", height="100%")
 									td(width="640")
 										table(width="640", align="center", cellspacing="0", cellpadding="0", border="0")
 											tbody
 												block newsContent
+									td(width="20", height="100%")
 				// products
 				tr(mc:hideable)
 					td(bgcolor="#c6ac89", width="100%")
-						table(width="640", align="center", cellspacing="0", cellpadding="0", border="0")
+						table(width="680", align="center", cellspacing="0", cellpadding="0", border="0")
 							tbody
 								tr
+									td(width="20", height="100%")
 									td(width="640")
 										table(width="640", align="center", cellspacing="0", cellpadding="0", border="0")
 											tbody
 												block productsContent
+									td(width="20", height="100%")
 				// blog posts
-				tr(mc:hideable)
+				tr
 					td(width="100%")
 						table(width="100%", align="center", cellspacing="0", cellpadding="0", border="0")
 							tbody
+								tr(mc:hideable)
+									td(bgcolor="#c6ac89", width="100%", height="30", colspan="3")
+								tr(mc:hideable)
+									td(width="100%", height="30", colspan="3", style="background-image:url(img/graphic_bg_transition_01.png); background-repeat:repeat-x; background-color: #C6AC89;")
+								tr(mc:hideable)
+									td(bgcolor="#f7f7f7", width="100%", height="30", colspan="3")
 								tr
-									td(bgcolor="#c6ac89", width="100%", height="30")
-								tr
-									td(width="100%", height="31", style="background-image:url(img/graphic_bg_transition_01.png); background-repeat:repeat-x; background-color: #C6AC89;")
-								tr
-									td(bgcolor="#f7f7f7", width="100%", height="30")
-								tr
-									td(bgcolor="#f7f7f7", width="100%")
+									td(bgcolor="#f7f7f7", width="100%", colspan="3")
 										table(width="640", align="center", cellspacing="0", cellpadding="0", border="0")
 											tbody
 												tr
@@ -110,34 +118,54 @@ html
 														table(width="640", align="center", cellspacing="0", cellpadding="0", border="0")
 															tbody
 																block blogContent
-								tr
-									td(bgcolor="#f7f7f7", width="100%", height="30")
-								tr
-									td(width="100%", height="31", style="background-image:url(img/graphic_bg_transition_02.png); background-repeat:repeat-x; background-color: #C6AC89;")
-								tr
-									td(bgcolor="#c6ac89", width="100%", height="30")
+								tr(mc:hideable)
+									td(bgcolor="#f7f7f7", width="100%", height="30", colspan="3")
+								tr(mc:hideable)
+									td(width="100%", height="31", colspan="3", style="background-image:url(img/graphic_bg_transition_02.png); background-repeat:repeat-x; background-color: #C6AC89;")
+								tr(mc:hideable)
+									td(bgcolor="#c6ac89", width="100%", height="30", colspan="3")
 				// recipes
-				tr(mc:hideable)
+				tr
 					td(bgcolor="#c6ac89", width="100%")
-						table(width="640", align="center", cellspacing="0", cellpadding="0", border="0")
+						table(width="680", align="center", cellspacing="0", cellpadding="0", border="0")
 							tbody
 								tr
+									td(width="20", height="100%")
 									td(width="640")
 										table(width="640", align="center", cellspacing="0", cellpadding="0", border="0")
 											tbody
 												block recipeContent
+									td(width="20", height="100%")
 				// footer
 				tr
 					td(width="100%", height="11", style="background-image:url(img/graphic_footer_bg_transition.png); background-repeat:repeat-x; background-color: #C6AC89;")
 				tr
 					td(bgcolor="#232223", width="100%", style="font-size: 10px; color: #fff; background-image:url(img/graphic_footer_bg.jpg); background-position: center top; background-size:100% 100%; background-color:#232223;")
-						table(width="640", align="center", cellspacing="0", cellpadding="0", border="0")
+						table(width="680", align="center", cellspacing="0", cellpadding="0", border="0")
 							tbody
 								tr
+									td(width="20", height="100%")
 									td(width="640")
 										table(width="640", align="center", cellspacing="0", cellpadding="0", border="0")
 											tbody
 												block footerContent
+									td(width="20", height="100%")
+				tr
+					td(bgcolor="#232223", width="100%", style="font-size: 10px; color: #fff; background-image:url(img/graphic_footer_bg.jpg); background-position: center top; background-size:100% 100%; background-color:#232223;")
+						table(width="680", align="center", cellspacing="0", cellpadding="0", border="0")
+							tbody
+								tr
+									td(width="20", height="100%")
+									td(width="640")
+										table(width="640", align="center", cellspacing="0", cellpadding="0", border="0")
+											tbody
+												tr
+													td(style="text-align:center; font-size: 12px;", mc:edit="editor_footer_unsub")
+														| Hvis du ikke ønsker at modtage nyhedsmails mere, så klik&nbsp;
+														a(href="*|UNSUB|*", style="color: #ffffff; font-size: 12px;") her
+												tr
+													td(width="100%", height="20")
+									td(width="20", height="100%")
 
 
 
