(Fix) - blog background was wrong color

--- a/assets/views/pages/index.jade
+++ b/assets/views/pages/index.jade
@@ -108,11 +108,11 @@ block append blogContent
 												img(src="img/content_blog_01.jpg", mc:edit="editor_repeat_blog_post_image")
 											td(width="20")
 											td(valign="top", align="left", style="color: #000;")
-												h2(style="margin-bottom: 3px; font-size: 18px; font-weight:normal; margin-top:5px; color:#262526; background-color:#ffffff", mc:edit="editor_repeat_blog_post_headline") Amet dolar 0sit lorem amet dolar lorem
-												p(style="font-size: 10px; background-color: #ffffff", mc:edit="editor_repeat_blog_post_writer")
+												h2(style="margin-bottom: 3px; font-size: 18px; font-weight:normal; margin-top:5px; color:#262526; background-color:#f7f7f7", mc:edit="editor_repeat_blog_post_headline") Amet dolar 0sit lorem amet dolar lorem
+												p(style="font-size: 10px; background-color: #f7f7f7", mc:edit="editor_repeat_blog_post_writer")
 													| Udgivet den 3. december 2013 af
 													a(style="color: #8b7250;")  Jeanette
-												p(style="font-size: 12px; background-color: #ffffff", mc:edit="editor_repeat_blog_post_content") Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi commodo, ipsum sed pharetra gravida, orci magna rhoncus neque, id pulvinar odio lorem non turpis. Nullam sit amet enim. Suspendisse id velit vitae ligula volutpat condimentum. Aliquam erat volutpat. Sed quis velit. Nulla facilisi. Nulla libero. Vivamus pharetra posuere sapien. Nam consectetuer. Sed aliquam, nunc eget euismod ullamcorper, lectus nunc ullamcorper orci, fermentum bibendum enim nibh eget ipsum. Donec porttitor ligula eu dolor.
+												p(style="font-size: 12px; background-color: #f7f7f7", mc:edit="editor_repeat_blog_post_content") Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi commodo, ipsum sed pharetra gravida, orci magna rhoncus neque, id pulvinar odio lorem non turpis. Nullam sit amet enim. Suspendisse id velit vitae ligula volutpat condimentum. Aliquam erat volutpat. Sed quis velit. Nulla facilisi. Nulla libero. Vivamus pharetra posuere sapien. Nam consectetuer. Sed aliquam, nunc eget euismod ullamcorper, lectus nunc ullamcorper orci, fermentum bibendum enim nibh eget ipsum. Donec porttitor ligula eu dolor.
 												p
 													div(mc:edit="editor_blog_link")
 														a(href="#")
