(Added) - header link to online version (Change) - opskrifter preset link

--- a/assets/views/master.jade
+++ b/assets/views/master.jade
@@ -37,7 +37,7 @@ html
 			tbody
 				// upperHeader
 
-				//tr
+				tr
 					td(bgcolor="#030303", width="100%")
 						table(width="680", align="center", cellspacing="0", cellpadding="0", border="0")
 							tbody
@@ -49,10 +49,11 @@ html
 												tr
 													td(height="3")
 												tr
-													td(align="center", valign="top")
-														a(href="#", style="color:#919191; font-size: 9px; text-decoration: none; display: block;", mc:edit="editor_upperheader_text") Har du problemer med at se indholdet, KLIK HER
+													td(align="center", valign="top", style="color: #919191")
+														a(href="*|ARCHIVE|*", style="color:#919191; font-size: 9px; text-decoration: none; display: block;", mc:edit="editor_upperheader_text")
+															| Har du problemer med at se indholdet, KLIK HER
 												tr
-													td(height="3")
+													td(height="4")
 									td(width="20", height="100%")
 				// header
 				tr
