--- a/assets/views/pages/index.jade
+++ b/assets/views/pages/index.jade
@@ -180,7 +180,7 @@ block append recipeContent
 					tr
 						td(align="center",colspan="3")
 							div(mc:edit="editor_recipe_link", style="background-color: #c6ac89")
-								a(href="#")
+								a(href="http://urtekram.dk/opskrifter/retter/alle", target="_blank")
 									img(src="img/graphic_readmore2.png")
 					tr
 						td(colspan="3", height="20")
