--- a/assets/views/master.jade
+++ b/assets/views/master.jade
@@ -99,17 +99,21 @@ html
 											tbody
 												block productsContent
 									td(width="20", height="100%")
+				tr(mc:hideable)
+					td(bgcolor="#c6ac89", width="100%", height="30")
 				// blog posts
 				tr
 					td(width="100%")
 						table(width="100%", align="center", cellspacing="0", cellpadding="0", border="0")
 							tbody
 								tr(mc:hideable)
-									td(bgcolor="#c6ac89", width="100%", height="30", colspan="3")
-								tr(mc:hideable)
-									td(width="100%", height="30", colspan="3", style="background-image:url(img/graphic_bg_transition_01.png); background-repeat:repeat-x; background-color: #C6AC89;")
-								tr(mc:hideable)
-									td(bgcolor="#f7f7f7", width="100%", height="30", colspan="3")
+									td(colspan="3")
+										table(width="100%", align="center", cellspacing="0", cellpadding="0", border="0")
+											tbody
+												tr
+													td(width="100%", height="30", colspan="3", style="background-image:url(img/graphic_bg_transition_01.png); background-repeat:repeat-x; background-color: #C6AC89;")
+												tr
+													td(bgcolor="#f7f7f7", width="100%", height="30", colspan="3")
 								tr
 									td(bgcolor="#f7f7f7", width="100%", colspan="3")
 										table(width="640", align="center", cellspacing="0", cellpadding="0", border="0")
@@ -120,11 +124,14 @@ html
 															tbody
 																block blogContent
 								tr(mc:hideable)
-									td(bgcolor="#f7f7f7", width="100%", height="30", colspan="3")
-								tr(mc:hideable)
-									td(width="100%", height="31", colspan="3", style="background-image:url(img/graphic_bg_transition_02.png); background-repeat:repeat-x; background-color: #C6AC89;")
-								tr(mc:hideable)
-									td(bgcolor="#c6ac89", width="100%", height="30", colspan="3")
+									td(colspan="3")
+										table(width="100%", align="center", cellspacing="0", cellpadding="0", border="0")
+											tr
+												td(bgcolor="#f7f7f7", width="100%", height="30", colspan="3")
+											tr
+												td(width="100%", height="31", colspan="3", style="background-image:url(img/graphic_bg_transition_02.png); background-repeat:repeat-x; background-color: #C6AC89;")
+											tr
+												td(bgcolor="#c6ac89", width="100%", height="30", colspan="3")
 				// recipes
 				tr
 					td(bgcolor="#c6ac89", width="100%")
