(Added) - template 031 (Added) - competition area. Copy of blog

--- a/assets/views/master.jade
+++ b/assets/views/master.jade
@@ -144,6 +144,42 @@ html
 											tbody
 												block recipeContent
 									td(width="20", height="100%")
+
+
+				// Competition posts
+				tr
+					td(width="100%")
+						table(width="100%", align="center", cellspacing="0", cellpadding="0", border="0")
+							tbody
+								tr(mc:hideable)
+									td(colspan="3")
+										table(width="100%", align="center", cellspacing="0", cellpadding="0", border="0")
+											tbody
+												tr
+													td(width="100%", height="30", colspan="3", style="background-image:url(img/graphic_bg_transition_01.png); background-repeat:repeat-x; background-color: #C6AC89;")
+												tr
+													td(bgcolor="#f7f7f7", width="100%", height="30", colspan="3")
+								tr
+									td(bgcolor="#f7f7f7", width="100%", colspan="3")
+										table(width="640", align="center", cellspacing="0", cellpadding="0", border="0")
+											tbody
+												tr
+													td(width="640")
+														table(width="640", align="center", cellspacing="0", cellpadding="0", border="0")
+															tbody
+																block competitionContent
+								tr(mc:hideable)
+									td(colspan="3")
+										table(width="100%", align="center", cellspacing="0", cellpadding="0", border="0")
+											tr
+												td(bgcolor="#f7f7f7", width="100%", height="30", colspan="3")
+											tr
+												td(width="100%", height="31", colspan="3", style="background-image:url(img/graphic_bg_transition_02.png); background-repeat:repeat-x; background-color: #C6AC89;")
+											tr
+												td(bgcolor="#c6ac89", width="100%", height="30", colspan="3")
+
+
+
 				// footer
 				tr
 					td(width="100%", height="11", style="background-image:url(img/graphic_footer_bg_transition.png); background-repeat:repeat-x; background-color: #C6AC89;")
@@ -174,7 +210,5 @@ html
 												tr
 													td(width="100%", height="20")
 									td(width="20", height="100%")
-
-
 
 
